--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,393 +22,7 @@ a:hover {
   color: rgba(233, 232, 238, 0.7);
 }
 
-/* Phone/Media styling */
 
-@media screen and (max-width: 600px){
-  .container {
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .logo-container .logo {
-    width: 300px;
-    height: 99px;
-  }
-  .logo-container {
-    height: 500px;
-  }
-
-  .logo-contact {
-    display: none;
-  }
-
-  .topnav {
-    display: none;
-  }
-
-  .topnav a {
-    margin: 0 auto; 
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 2px 2px;
-    text-decoration: none;
-  }
-
-  .photo-headliner .inner-text h1, .photo-headliner .inner-text h2{
-    display: none;
-  }
-
-  .photo-headliner {
-    position: relative;
-    background-color: #ffffff;
-    padding: 10px;
-    height: 150px;
-    overflow: hidden;
-    background-image: url("../photos/header.jpeg");
-    background-color: #cccccc; /* Used if the image is unavailable */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-  }
-  
-  .inner-text {
-    font-family: "Arial Black";
-    text-align: center;
-    position: absolute;
-    font-weight: 900;
-    top: 50%;
-    left: 25%;
-    -webkit-text-stroke: 1px blue;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-    text-rendering: optimizeLegibility; 
-  }  
-
-  .slideshow-container {
-    float: left; 
-    width:200px;
-    height:200px;
-    overflow: hidden;
-    margin-right: 5px;
-    margin-left: auto;
-    /* border-radius: 20px; */
-  }
-
-  .about {
-    background-color: rgb(146, 145, 145);
-    height: 20%; /* Should be removed. Only for demonstration */
-  }
-
-  #colossians {
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-
-  .testimonials {
-    width: 100%;
-  }
-
-  .testimonials span{
-    font-size: 2.0em;
-    font-weight: bold;
-    margin-left: 10px;
-  }
-
-  .testimonials .before-and-after-1 {
-    width: 100%;
-    display: inline-block;
-    margin-left:auto;
-    margin-right: auto;
-  }
-  .testimonials .before-and-after-2 {
-    width: 80%;
-    display: none;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .testimonials .before-and-after-3 {
-    width: 100%;
-    display: inline-block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 10px;
-  }
-
-  .testimonials .roof-quote-3 {
-    top: 20%;
-    font-size: 0.7em;
-  }
-  .testimonials .roof-quote-1 {
-    top: 20%;
-    font-size: 0.7em;
-  }
-
-  .roofing-services {
-    padding: 10px;
-    height: 15%; 
-    word-wrap: break-word;
-    text-align: left;
-  }
-
-  .roof-service {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 2px;
-    margin-top: 2px;
-    text-align: center;
-  }
-  
-  .roof-service img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-  }
-
-  .roof-service-mid {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 5px;
-    margin-top: 2px;
-    text-align: center;
-  }
-
-  .roof-service-mid img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-  }
-
-  .contact {
-    width: 100%;
-  }
-
-  .news {
-    float: left;
-    width: 100%;
-    margin-right: 10px;
-    text-align: center;
-  }
-
-  .contact iframe {
-    width: 100%;
-    height: 100%;
-  }
-
-  .contact-us {
-    float: left;
-    width: 100%;
-    height: auto;
-    text-align: center;
-  }
-  
-  .map {
-    width: 100%;
-  }
-}
-
-/* Phone/Media styling */
-@media screen and (min-width: 600px) and (max-width: 1010px){
-  .container {
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .logo-container .logo {
-    width: 300px;
-    height: 99px;
-  }
-  .logo-container {
-    height: 500px;
-  }
-
-  .logo-contact {
-    display: none;
-  }
-
-  .topnav {
-    display: none;
-  }
-
-  .topnav a {
-    margin: 0 auto; 
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 2px 2px;
-    text-decoration: none;
-  }
-
-  .photo-headliner .inner-text h1, .photo-headliner .inner-text h2{
-    display: none;
-  }
-
-  .photo-headliner {
-    position: relative;
-    background-color: #ffffff;
-    padding: 10px;
-    height: 150px;
-    overflow: hidden;
-    background-image: url("../photos/header.jpeg");
-    background-color: #cccccc; /* Used if the image is unavailable */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-  }
-  
-  .inner-text {
-    font-family: "Arial Black";
-    text-align: center;
-    position: absolute;
-    font-weight: 900;
-    top: 50%;
-    left: 25%;
-    -webkit-text-stroke: 1px blue;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-    text-rendering: optimizeLegibility; 
-  }  
-
-  .slideshow-container {
-    float: left; 
-    width:200px;
-    height:200px;
-    overflow: hidden;
-    margin-right: 5px;
-    margin-left: auto;
-    /* border-radius: 20px; */
-  }
-
-  .about {
-    background-color: rgb(146, 145, 145);
-    height: 20%; /* Should be removed. Only for demonstration */
-  }
-
-  #colossians {
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-
-  .testimonials {
-    width: 100%;
-  }
-
-  .testimonials span{
-    font-size: 2.0em;
-    font-weight: bold;
-    margin-left: 10px;
-  }
-
-  .testimonials .before-and-after-1 {
-    width: 100%;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .testimonials .before-and-after-2 {
-    width: 100%;
-    display: inline-block;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .testimonials .before-and-after-3 {
-    width: 100%;
-    display: inline-block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 10px;
-  }
-
-  .testimonials .roof-quote-3 {
-    top: 20%;
-  }
-  .testimonials .roof-quote-1 {
-    top: 20%;
-  }
-
-  .roofing-services {
-    background-color: rgb(146, 145, 145);
-    padding: 10px;
-    height: 15%; 
-    word-wrap: break-word;
-    text-align: left;
-  }
-
-  .roof-service {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 2px;
-    margin-top: 2px;
-    text-align: center;
-  }
-  
-  .roof-service img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-  }
-
-  .roof-service-mid {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 5px;
-    margin-top: 2px;
-    text-align: center;
-  }
-
-  .roof-service-mid img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-  }
-
-  .contact {
-    width: 100%;
-  }
-
-  .news {
-    float: left;
-    width: 100%;
-    margin-right: 10px;
-    text-align: center;
-  }
-
-  .contact iframe {
-    width: 100%;
-    height: 100%;
-  }
-
-  .contact-us {
-    float: left;
-    width: 100%;
-    height: auto;
-    text-align: center;
-  }
-  
-  .map {
-    width: 100%;
-  }
-}
 
 
 
@@ -516,36 +130,7 @@ header {
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
 }
-  
-/* .inner-text {
-  font-family: "Arial Black";
-  text-align: center;
-  position: absolute;
-  font-weight: 900;
-  top: 120px;
-  left: 50%;
-  -webkit-text-stroke: 1px blue;
-  transform: translate(-50%, -50%);
-  color: white;
-}  
 
-.inner-text h1{
-  font-size: 3em;
-  -webkit-text-stroke: 2px rgb(31, 27, 238);
-}
-
-.inner-text h2{
-  font-size: 2.5em;
-  -webkit-text-stroke: 2px rgb(31, 27, 238);
-}
-
-.inner-text h3 {
-  font-size: 2.0em;
-}
-
-.inner-text h3 .LA-credit {
-  font-size: 0.8em;
-} */
 
 /* Option # 1 */
 .inner-text {
@@ -553,8 +138,8 @@ header {
   text-align: center;
   position: absolute;
   font-weight: 900;
-  top: 60%;
-  left: 350px;
+  top: 70%;
+  left: 35%;
   -webkit-text-stroke: 1px blue;
   transform: translate(-50%, -50%);
   color: white;
@@ -896,3 +481,406 @@ header {
   .footer p {
     font-size: 0.8em;
   }
+
+  /* Phone/Media styling */
+
+@media screen and (max-width: 600px){
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .logo-container .logo {
+    width: 300px;
+    height: 99px;
+  }
+  .logo-container {
+    height: 500px;
+  }
+
+  .logo-contact {
+    display: none;
+  }
+
+  .topnav {
+    display: none;
+  }
+
+  .topnav a {
+    margin: 0 auto; 
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 2px 2px;
+    text-decoration: none;
+  }
+
+  .photo-headliner .inner-text h2{
+    display: none;
+  }
+
+  .photo-headliner .inner-text h1 {
+    font-size: 1.5em;
+  }
+
+  .photo-headliner .inner-text h3 {
+    font-size: 1.0em;
+  }
+
+  .photo-headliner {
+    position: relative;
+    background-color: #ffffff;
+    padding: 10px;
+    height: 400px;
+    overflow: hidden;
+    background-image: url("../photos/header.jpeg");
+    background-color: #cccccc; /* Used if the image is unavailable */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  }
+  
+  .inner-text {
+    font-family: "Arial Black";
+    text-align: left;
+    position: absolute;
+    font-weight: 900;
+    top: 75%;
+    left: 35%;
+    -webkit-text-stroke: 1px blue;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-rendering: optimizeLegibility; 
+  }  
+
+  .slideshow-container {
+    float: left; 
+    width:200px;
+    height:200px;
+    overflow: hidden;
+    margin-right: 5px;
+    margin-left: auto;
+    /* border-radius: 20px; */
+  }
+
+  .about {
+    background-color: rgb(146, 145, 145);
+    height: 20%; /* Should be removed. Only for demonstration */
+  }
+
+  #colossians {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .testimonials {
+    width: 100%;
+  }
+
+  .testimonials span{
+    font-size: 2.0em;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+
+  .testimonials .before-and-after-1 {
+    width: 100%;
+    display: inline-block;
+    margin-left:auto;
+    margin-right: auto;
+  }
+  .testimonials .before-and-after-2 {
+    width: 80%;
+    display: none;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .testimonials .before-and-after-3 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+  }
+
+  .testimonials .roof-quote-3 {
+    top: 20%;
+    font-size: 0.7em;
+  }
+  .testimonials .roof-quote-1 {
+    top: 20%;
+    font-size: 0.7em;
+  }
+
+  .roofing-services {
+    padding: 10px;
+    height: 15%; 
+    word-wrap: break-word;
+    text-align: left;
+  }
+
+  .roof-service {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 98%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 2px;
+    margin-top: 2px;
+    text-align: center;
+  }
+  
+  .roof-service img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .roof-service-mid {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 98%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 5px;
+    margin-top: 2px;
+    text-align: center;
+  }
+
+  .roof-service-mid img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .contact {
+    width: 100%;
+  }
+
+  .news {
+    float: left;
+    width: 100%;
+    margin-right: 10px;
+    text-align: center;
+  }
+
+  .contact iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+  .contact-us {
+    float: left;
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+  
+  .map {
+    width: 100%;
+  }
+}
+
+/* Phone/Media styling */
+@media screen and (min-width: 600px) and (max-width: 1010px){
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .logo-container .logo {
+    width: 300px;
+    height: 99px;
+  }
+  .logo-container {
+    height: 500px;
+  }
+
+  .logo-contact {
+    display: none;
+  }
+
+  .topnav {
+    display: none;
+  }
+
+  .topnav a {
+    margin: 0 auto; 
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 2px 2px;
+    text-decoration: none;
+  }
+
+  .photo-headliner .inner-text h2{
+    font-size: 2.0em;
+  }
+  .photo-headliner .inner-text h1 {
+    font-size: 2.0em;
+  }
+
+  .photo-headliner .inner-text h3 {
+    font-size: 1.5em;
+  }
+
+  .photo-headliner {
+    position: relative;
+    background-color: #ffffff;
+    padding: 10px;
+    height: 450px;
+    overflow: hidden;
+    background-image: url("../photos/header.jpeg");
+    background-color: #cccccc; /* Used if the image is unavailable */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  }
+  
+  .inner-text {
+    font-family: "Arial Black";
+    text-align: center;
+    position: absolute;
+    font-weight: 900;
+    top: 70%;
+    left: 25%;
+    -webkit-text-stroke: 1px blue;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-rendering: optimizeLegibility; 
+  }  
+
+  .slideshow-container {
+    float: left; 
+    width:200px;
+    height:200px;
+    overflow: hidden;
+    margin-right: 5px;
+    margin-left: auto;
+    /* border-radius: 20px; */
+  }
+
+  .about {
+    background-color: rgb(146, 145, 145);
+    height: 20%; /* Should be removed. Only for demonstration */
+  }
+
+  #colossians {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .testimonials {
+    width: 100%;
+  }
+
+  .testimonials span{
+    font-size: 2.0em;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+
+  .testimonials .before-and-after-1 {
+    width: 100%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .testimonials .before-and-after-2 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .testimonials .before-and-after-3 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+  }
+
+  .testimonials .roof-quote-3 {
+    top: 20%;
+  }
+  .testimonials .roof-quote-1 {
+    top: 20%;
+  }
+
+  .roofing-services {
+    background-color: rgb(146, 145, 145);
+    padding: 10px;
+    height: 15%; 
+    word-wrap: break-word;
+    text-align: left;
+  }
+
+  .roof-service {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 48%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 2px;
+    margin-top: 2px;
+    text-align: center;
+  }
+  
+  .roof-service img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .roof-service-mid {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 48%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 5px;
+    margin-top: 2px;
+    text-align: center;
+  }
+
+  .roof-service-mid img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .contact {
+    width: 100%;
+  }
+
+  .news {
+    float: left;
+    width: 100%;
+    margin-right: 10px;
+    text-align: center;
+  }
+
+  .contact iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+  .contact-us {
+    float: left;
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+  
+  .map {
+    width: 100%;
+  }
+}
