--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,12 @@ a:hover {
   color: rgba(233, 232, 238, 0.7);
 }
 
+a:visited {
+  color: black;
+  text-decoration: none;
+  -webkit-text-stroke: 1px rgb(66, 78, 120);
+}
+
 
 
 
@@ -138,6 +144,7 @@ header {
   text-align: center;
   position: absolute;
   font-weight: 900;
+  float: left;
   top: 70%;
   left: 25%;
   -webkit-text-stroke: 2px rgb(66, 78, 120);
@@ -169,6 +176,16 @@ header {
 
 .inner-text h3 .LA-credit {
   font-size: 0.8em;
+}
+
+.inner-veteran-image {
+  padding-top: 300px;
+  padding-right:30px;
+  float: right;
+  opacity: 0.8;
+}
+.inner-veteran-image img {
+  width: 200px;
 }
 
 /* About and Roofing */
@@ -412,11 +429,12 @@ header {
 
   .contact {
     background-color: rgba(56, 86, 255, 0.7);
-    height: 20%; 
+    height: 25%; 
     padding: 10px;
     width: 100%;
     float: left;
     overflow: hidden;
+    padding-bottom: 25px;
   }
     
   .contact h1{
@@ -455,8 +473,8 @@ header {
     height: 355px;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 10px;
     overflow: hidden;
+    border: none;
   }
   
   .josh-contact {
@@ -469,8 +487,9 @@ header {
   }
   
   .contact .social-icons {
-    width: 50px;
+    width: 75px;
     height: auto;
+    margin-bottom: 25px;
   }
   
   /* Style the footer */
@@ -484,6 +503,216 @@ header {
   .footer p {
     font-size: 0.8em;
   }
+
+
+
+/* TABLET/Media styling */
+@media screen and (min-width: 600px) and (max-width: 1010px){
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .logo-container .logo {
+    width: 300px;
+    height: 99px;
+  }
+  .logo-container {
+    height: 500px;
+  }
+
+  .logo-contact {
+    display: none;
+  }
+
+  .topnav {
+    display: none;
+  }
+
+  .topnav a {
+    margin: 0 auto; 
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 2px 2px;
+    text-decoration: none;
+  }
+
+  .photo-headliner .inner-text h2{
+    font-size: 2.0em;
+  }
+  .photo-headliner .inner-text h1 {
+    font-size: 2.0em;
+  }
+
+  .photo-headliner .inner-text h3 {
+    font-size: 1.5em;
+  }
+
+  .photo-headliner {
+    position: relative;
+    background-color: #ffffff;
+    padding: 10px;
+    height: 450px;
+    overflow: hidden;
+    background-image: url("../photos/header.jpeg");
+    background-color: #cccccc; /* Used if the image is unavailable */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+  }
+  
+  .inner-text {
+    font-family: "Arial Black";
+    text-align: center;
+    position: absolute;
+    font-weight: 900;
+    top: 70%;
+    left: 25%;
+    -webkit-text-stroke: 1px blue;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-rendering: optimizeLegibility; 
+  }  
+
+  .inner-veteran-image {
+    padding-top: 250px;
+    padding-right:30px;
+  }
+
+  .inner-veteran-image img {
+    width: 200px;
+  }
+
+  .slideshow-container {
+    float: left; 
+    width:200px;
+    height:200px;
+    overflow: hidden;
+    margin-right: 5px;
+    margin-left: auto;
+    /* border-radius: 20px; */
+  }
+
+  .about {
+    background-color: rgb(146, 145, 145);
+    height: 20%; /* Should be removed. Only for demonstration */
+  }
+
+  #colossians {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .testimonials {
+    width: 100%;
+  }
+
+  .testimonials span{
+    font-size: 2.0em;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+
+  .testimonials .before-and-after-1 {
+    width: 100%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .testimonials .before-and-after-2 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .testimonials .before-and-after-3 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+  }
+
+  .testimonials .roof-quote-3 {
+    top: 20%;
+  }
+  .testimonials .roof-quote-1 {
+    top: 20%;
+  }
+
+  .roofing-services {
+    background-color: rgb(146, 145, 145);
+    padding: 10px;
+    height: 15%; 
+    word-wrap: break-word;
+    text-align: left;
+  }
+
+  .roof-service {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 48%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 2px;
+    margin-top: 2px;
+    text-align: center;
+  }
+  
+  .roof-service img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .roof-service-mid {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 48%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 5px;
+    margin-top: 2px;
+    text-align: center;
+  }
+
+  .roof-service-mid img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .contact {
+    width: 100%;
+  }
+
+  .news {
+    float: left;
+    width: 100%;
+    margin-right: 10px;
+    text-align: center;
+  }
+
+  .contact iframe {
+    width: 75%;
+  }
+
+  .contact-us {
+    float: left;
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+  
+  .map {
+    width: 100%;
+  }
+}  
 
   /* Phone/Media styling */
 
@@ -548,13 +777,23 @@ header {
     text-align: left;
     position: absolute;
     font-weight: 900;
-    top: 75%;
+    float: left;
+
     left: 35%;
     -webkit-text-stroke: 1px blue;
     transform: translate(-50%, -50%);
     color: #ffffff;
     text-rendering: optimizeLegibility; 
   }  
+
+  .inner-veteran-image {
+    padding-top: 250px;
+    padding-right: 0px;
+    left: 35%;
+  }
+  .inner-veteran-image img {
+    width: 100px;
+  }
 
   .slideshow-container {
     float: left; 
@@ -672,8 +911,8 @@ header {
   }
 
   .contact iframe {
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: auto;
   }
 
   .contact-us {
@@ -688,202 +927,3 @@ header {
   }
 }
 
-/* Phone/Media styling */
-@media screen and (min-width: 600px) and (max-width: 1010px){
-  .container {
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .logo-container .logo {
-    width: 300px;
-    height: 99px;
-  }
-  .logo-container {
-    height: 500px;
-  }
-
-  .logo-contact {
-    display: none;
-  }
-
-  .topnav {
-    display: none;
-  }
-
-  .topnav a {
-    margin: 0 auto; 
-    display: inline-block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 2px 2px;
-    text-decoration: none;
-  }
-
-  .photo-headliner .inner-text h2{
-    font-size: 2.0em;
-  }
-  .photo-headliner .inner-text h1 {
-    font-size: 2.0em;
-  }
-
-  .photo-headliner .inner-text h3 {
-    font-size: 1.5em;
-  }
-
-  .photo-headliner {
-    position: relative;
-    background-color: #ffffff;
-    padding: 10px;
-    height: 450px;
-    overflow: hidden;
-    background-image: url("../photos/header.jpeg");
-    background-color: #cccccc; /* Used if the image is unavailable */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-  }
-  
-  .inner-text {
-    font-family: "Arial Black";
-    text-align: center;
-    position: absolute;
-    font-weight: 900;
-    top: 70%;
-    left: 25%;
-    -webkit-text-stroke: 1px blue;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-    text-rendering: optimizeLegibility; 
-  }  
-
-  .slideshow-container {
-    float: left; 
-    width:200px;
-    height:200px;
-    overflow: hidden;
-    margin-right: 5px;
-    margin-left: auto;
-    /* border-radius: 20px; */
-  }
-
-  .about {
-    background-color: rgb(146, 145, 145);
-    height: 20%; /* Should be removed. Only for demonstration */
-  }
-
-  #colossians {
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-
-  .testimonials {
-    width: 100%;
-  }
-
-  .testimonials span{
-    font-size: 2.0em;
-    font-weight: bold;
-    margin-left: 10px;
-  }
-
-  .testimonials .before-and-after-1 {
-    width: 100%;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .testimonials .before-and-after-2 {
-    width: 100%;
-    display: inline-block;
-    margin-right: auto;
-    margin-left: auto;
-  }
-  .testimonials .before-and-after-3 {
-    width: 100%;
-    display: inline-block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 10px;
-  }
-
-  .testimonials .roof-quote-3 {
-    top: 20%;
-  }
-  .testimonials .roof-quote-1 {
-    top: 20%;
-  }
-
-  .roofing-services {
-    background-color: rgb(146, 145, 145);
-    padding: 10px;
-    height: 15%; 
-    word-wrap: break-word;
-    text-align: left;
-  }
-
-  .roof-service {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 2px;
-    margin-top: 2px;
-    text-align: center;
-  }
-  
-  .roof-service img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-  }
-
-  .roof-service-mid {
-    float: left;    
-    padding: 10px;
-    height: auto;
-    width: 48%;
-    overflow: hidden;
-    margin: 0px;
-    margin-right: 5px;
-    margin-top: 2px;
-    text-align: center;
-  }
-
-  .roof-service-mid img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-  }
-
-  .contact {
-    width: 100%;
-  }
-
-  .news {
-    float: left;
-    width: 100%;
-    margin-right: 10px;
-    text-align: center;
-  }
-
-  .contact iframe {
-    width: 100%;
-    height: 100%;
-  }
-
-  .contact-us {
-    float: left;
-    width: 100%;
-    height: auto;
-    text-align: center;
-  }
-  
-  .map {
-    width: 100%;
-  }
-}
